examples/datalog/10_edge_cases/137_single_tuple.dl.out
Connecting to server at http://127.0.0.1:8080...
Connected!

Server status: healthy
Current knowledge graph: default

> .kg create test_single_tuple
Knowledge graph 'test_single_tuple' created.
Switched to knowledge graph: test_single_tuple
> .kg use test_single_tuple
Switched to knowledge graph: test_single_tuple
> +singleton[(42, "answer", true)].
Inserted 1 fact(s) into 'singleton'.
> ?- singleton(A, B, C).
1 rows:
  (42, "answer", "true")
> +single_sum(<SUM:A>) :- singleton(A, _, _).
Script error: Parse error: Invalid term: '<SUM:A>'
